--- a/src/main/resources/templates/urls/show.html
+++ b/src/main/resources/templates/urls/show.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Список сайтов</title>
+    <title>Анализатор страниц</title>
     <!--    <link rel="stylesheet" href="/webjars/bootstrap/5.1.1/css/bootstrap.min.css">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -14,8 +14,7 @@
           crossorigin="anonymous">
     <script src="/webjars/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>
 </head>
-
-<section layout:fragment="content">
+<section>
     <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -32,38 +31,25 @@
             </div>
         </div>
     </nav>
+    <div class="container-lg mt-5" th:object="${url}">
+        <h1 th:text="*{getName()}">Сайт</h1>
 
-    <div class="container-lg mt-5">
         <table class="table table-bordered table-hover mt-3">
-            <thead>
-            <tr>
-                <th class="col-1">ID</th>
-                <th>Имя</th>
-                <th class="col-2">Последняя проверка</th>
-                <th class="col-1">Код ответа</th>
-            </tr>
-            </thead>
             <tbody>
-            <tr th:each="url : ${urls}" th:object="${url}">
+            <tr>
+                <td class="col-3">ID</td>
                 <td th:text="*{id}"></td>
-                <td>
-                    <a th:text="*{getName()}" th:href="@{/urls/{id}(id=*{getId()})}"></a>
-                </td>
-                <td th:text="${#dates.format(url.createdAt, 'dd/MM/yyyy HH:mm')}"></td>
-                <td>200</td>
             </tr>
+            <tr>
+                <td>Имя</td>
+                <td th:text="*{getName()}"></td>
+            </tr>
+            <tr>
+                <td>Дата создания</td>
+                <td th:text="${#dates.format(url.createdAt, 'dd/MM/yyyy HH:mm')}"></td>
+            </tr>
+            </tbody>
         </table>
     </div>
-    <div class="container">
-        <nav>
-            <ul class="pagination justify-content-center">
-                <li class="page-item">
-                    <a class="page-link" th:href="@{/urls(page=(${page < 2}) ? 1 : (${page - 1}))}">Prev</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" th:href="@{/urls(page=${page + 1})}">Next</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+</section>
 </section>
