--- a/src/main/resources/templates/urls/show.html
+++ b/src/main/resources/templates/urls/show.html
@@ -47,7 +47,25 @@
             </tr>
             </tbody>
         </table>
+        <div class="container-lg mt-5" th:object="${url}">
+            <h2 class="mt-5">Проверки</h2>
+            <a class="btn btn-primary" th:href="@{/urls/{id}/checks(id=*{id})}">Запустить проверки</a>
+        </div>
+        <table class="table table-bordered table-hover mt-3">
+            <thead>
+            <tr><th class="col-1">ID</th>
+                <th class="col-1">Код ответа</th>
+                <th>title</th>
+                <th>h1</th>
+                <th>description</th>
+                <th class="col-2">Дата проверки</th>
+            </tr></thead>
+            <tbody>
+
+            </tbody>
+        </table>
     </div>
+
     </body>
 </section>
 </section>
