--- a/src/main/resources/templates/urls/show.html
+++ b/src/main/resources/templates/urls/show.html
@@ -48,6 +48,10 @@
             </tbody>
         </table>
         <div class="container-lg mt-5" th:object="${url}">
+            <div th:if="${session.flash}" class="rounded-0 m-0 alert alert-dismissible fade show alert-danger"
+                 role="alert" th:text="${session.flash}">
+                <div th:if="${session.flash}" th:text="${#session.removeAttribute('flash')}"></div>
+            </div>
             <h2 class="mt-5">Проверки</h2>
             <form method="post" th:action="@{/urls/{id}/checks(id=*{id})}">
                 <button type="submit" class="btn btn-primary">Запустить проверку</button>
