add error flash

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,10 +56,8 @@
             </div>
         </div>
         <div class="container mt-3">
-            <div th:if="${session.flash}" class="rounded-0 m-0 alert alert-dismissible fade show alert-info"
-                 role="alert" th:text="${session.flash}">
-                <div th:if="${session.flash}" th:text="${#session.removeAttribute('flash')}"></div>
-            </div>
+            <div th:if="${session.flash}" class="alert alert-info" role="alert" th:text="${session.flash}"></div>
+            <div th:if="${session.flash}" th:text="${#session.removeAttribute('flash')}"></div>
         </div>
     </section>
 </main>
