--- a/src/main/resources/templates/urls/index.html
+++ b/src/main/resources/templates/urls/index.html
@@ -47,10 +47,12 @@
                 <td>
                     <a th:text="*{getName()}" th:href="@{/urls/{id}(id=*{getId()})}"></a>
                 </td>
-                <td th:text="${#dates.format(url.getCreatedAt(), 'dd/MM/yyyy HH:mm')}"></td>
-<!--                <td th:text="${#dates.format(url.getUrlCheck().get(0).getCreatedAt(), 'dd/MM/yyyy HH:mm')}">??</td>-->
-<!--                <td th:text="*{getUrlCheck().get(0).getStatusCode()}">???</td>-->
-                <td>???</td>
+                <td th:text="${#dates.format(url.getUrlCheck().get(url.getUrlCheck().size - 1).getCreatedAt(), 'dd/MM/yyyy HH:mm')}"
+                    th:if="${not url.getUrlCheck().isEmpty()}">
+                </td>
+                <td th:text="*{getUrlCheck().get(getUrlCheck().size - 1).getStatusCode()}"
+                    th:if="${not url.getUrlCheck().isEmpty()}">???
+                </td>
             </tr>
         </table>
     </div>
