--- a/src/main/resources/templates/urls/index.html
+++ b/src/main/resources/templates/urls/index.html
@@ -10,7 +10,7 @@
           rel="stylesheet"
           integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
           crossorigin="anonymous">
-    <script src="/webjars/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>
+<!--    <script src="/webjars/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>-->
 </head>
 
 <section layout:fragment="content">
